[gd_scene load_steps=2 format=3 uid="uid://ddsud67ja50xp"]

[ext_resource type="Script" uid="uid://bxy81atxivn86" path="res://System_task_manager/program_test.gd" id="1_u1kr4"]

[node name="program" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u1kr4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 51.0
offset_right = 392.0
offset_bottom = 536.0
color = Color(0.4804794, 0.5165994, 0.40823933, 1)

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 0

[node name="Button_Spawn" type="Button" parent="Background/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Spawn Item"

[node name="Add_slot" type="Button" parent="Background/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Add Slot"

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 420)
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[node name="Button" type="Button" parent="Background"]
layout_mode = 0
offset_left = 0.3513031
offset_top = -39.0
offset_right = 345.0
offset_bottom = 0.18919754
flat = true

[node name="draggable_border" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = -1.0
offset_top = -39.0
offset_right = 345.0
offset_bottom = 1.0
mouse_filter = 2
color = Color(0.5372549, 0.63529414, 0.34117648, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/draggable_border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Background/draggable_border/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
text = "Task Manager"

[node name="HBoxContainer" type="HBoxContainer" parent="Background/draggable_border"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="minimizar" type="Button" parent="Background/draggable_border/HBoxContainer"]
layout_mode = 2
text = "[ ]"

[node name="fechar" type="Button" parent="Background/draggable_border/HBoxContainer"]
custom_minimum_size = Vector2(31.09, 0)
layout_mode = 2
text = "X"

[node name="Spawn_1" type="Marker2D" parent="."]
position = Vector2(85, 168)

[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Header/Button_Spawn" to="." method="_on_button_spawn_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Header/Add_slot" to="." method="_on_add_slot_pressed"]
[connection signal="button_down" from="Background/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Background/Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Background/draggable_border/HBoxContainer/minimizar" to="." method="_on_minimizar_pressed"]
